优化agent文件传输任务代码